--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,11 @@ android {
         enabled = true
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
@@ -56,8 +61,13 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:10.2.6'
     compile 'com.google.firebase:firebase-database:10.2.6'
 
-    // Tools
+    // Architecture Components
+    compile "android.arch.lifecycle:runtime:1.0.0-alpha1"
+    compile "android.arch.lifecycle:extensions:1.0.0-alpha1"
+    compile "android.arch.persistence.room:runtime:1.0.0-alpha1"
     kapt "com.android.databinding:compiler:2.3.0"
+    kapt "android.arch.lifecycle:compiler:1.0.0-alpha1"
+    kapt "android.arch.persistence.room:compiler:1.0.0-alpha1"
 
     // Testing
     testCompile 'junit:junit:4.12'
