--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,10 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '26.0.0 rc2'
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         applicationId "com.abraaolima.safechat"
@@ -23,10 +22,6 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-    }
-
-    dataBinding {
-        enabled = true
     }
 
     sourceSets {
@@ -60,13 +55,12 @@ dependencies {
     compile 'android.arch.lifecycle:runtime:1.0.0-alpha1'
     compile 'android.arch.lifecycle:extensions:1.0.0-alpha1'
     compile 'android.arch.persistence.room:runtime:1.0.0-alpha1'
-    kapt 'com.android.databinding:compiler:2.3.0'
     kapt 'android.arch.lifecycle:compiler:1.0.0-alpha1'
     kapt 'android.arch.persistence.room:compiler:1.0.0-alpha1'
 
     // Dagger 2
-    compile 'com.google.dagger:dagger:2.11-rc2'
-    kapt 'com.google.dagger:dagger-compiler:2.11-rc2'
+    compile 'com.google.dagger:dagger:2.10'
+    kapt 'com.google.dagger:dagger-compiler:2.10'
     provided 'org.glassfish:javax.annotation:10.0-b28'
 
     // Testing
