--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,11 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    buildToolsVersion '25.0.3'
+
+    dataBinding {
+        enabled = true
+    }
 
     defaultConfig {
         applicationId "com.abraaolima.safechat"
@@ -29,34 +33,43 @@ android {
     }
 }
 
+kapt {
+    generateStubs = true
+}
+
 dependencies {
 
     // Kotlin
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
     // Support Libraries
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:customtabs:25.3.1'
-    compile 'com.android.support:palette-v7:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:design:25.4.0'
+    compile 'com.android.support:support-v4:25.4.0'
+    compile 'com.android.support:customtabs:25.4.0'
+    compile 'com.android.support:palette-v7:25.4.0'
+    compile 'com.android.support:cardview-v7:25.4.0'
+    compile 'com.android.support:appcompat-v7:25.4.0'
+    compile 'com.android.support:recyclerview-v7:25.4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     // Firebase
-    compile 'com.google.firebase:firebase-core:10.2.6'
-    compile 'com.google.firebase:firebase-auth:10.2.6'
-    compile 'com.google.firebase:firebase-crash:10.2.6'
-    compile 'com.google.firebase:firebase-storage:10.2.6'
-    compile 'com.google.firebase:firebase-database:10.2.6'
+    compile 'com.google.firebase:firebase-core:11.0.0'
+    compile 'com.google.firebase:firebase-auth:11.0.0'
+    compile 'com.google.firebase:firebase-crash:11.0.0'
+    compile 'com.google.firebase:firebase-storage:11.0.0'
+    compile 'com.google.firebase:firebase-database:11.0.0'
 
     // Architecture Components
-    compile 'android.arch.lifecycle:runtime:1.0.0-alpha1'
-    compile 'android.arch.lifecycle:extensions:1.0.0-alpha1'
-    compile 'android.arch.persistence.room:runtime:1.0.0-alpha1'
-    kapt 'android.arch.lifecycle:compiler:1.0.0-alpha1'
-    kapt 'android.arch.persistence.room:compiler:1.0.0-alpha1'
+    compile 'android.arch.lifecycle:runtime:1.0.0-alpha2'
+    compile 'android.arch.lifecycle:extensions:1.0.0-alpha2'
+    compile 'android.arch.persistence.room:runtime:1.0.0-alpha2'
+    kapt 'android.arch.lifecycle:compiler:1.0.0-alpha2'
+    kapt 'android.arch.persistence.room:compiler:1.0.0-alpha2'
+
+    // RxJava
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compile 'io.reactivex.rxjava2:rxkotlin:2.0.0'
+    compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
 
     // Dagger 2
     compile 'com.google.dagger:dagger:2.10'
